--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,7 @@ body {
 
 h1 {
   font-size: 48px;
+  margin: 0;
 }
 
 h2 {
@@ -19,6 +20,7 @@ header {
   background-color: #588c94;
   color: white;
   text-align: center;
+  padding: 50px 0;
 }
 
 .intro {
@@ -29,8 +31,14 @@ header {
 .my-skills {
   background-color: #1d3c41;
   color: white;
+  padding: 30px 0;
 }
 
 .columns {
   width: 750px;
+  display: flex;
+}
+
+.column {
+  margin: 5px;
 }
