--- a/CSS/NewStyle.css
+++ b/CSS/NewStyle.css
@@ -15,6 +15,9 @@ Typography
 
 body {
   margin: 0;
+  background-image: url(./ios-vs-android-users.jpg);
+  justify-content: center;
+  height: auto;
 
   /* this font size will effect all elements (other than h1 -> h6) on the page */
 
@@ -41,6 +44,7 @@ header {
   width: 500px;
   margin: 100px auto;
   text-align: center;
+  color: black;
 }
 .my-skills {
   background-color: #1d3c41;
